k8s/ingress-demo/blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: machineinfo-deploy-blue
spec:
  selector:
    matchLabels:
      app: machineinfo-blue
  replicas: 1
  template:
    metadata:
      labels:
        app: machineinfo-blue  
    spec:
      containers:
      - name: machineinfo
        image: nehashirsat/machineinfo:blue
        ports:
        - containerPort: 9000
