k8s/ingress-demo/pink.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: machineinfo-deploy-pink
spec:
  selector:
    matchLabels:
      app: machineinfo-pink
  replicas: 1
  template:
    metadata:
      labels:
        app: machineinfo-pink  
    spec:
      containers:
      - name: machineinfo
        image: nehashirsat/machineinfo:pink
        ports:
        - containerPort: 9000
